Fix - Spacing Issue on resume page

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,15 +3,6 @@
     float: left;
 }
 
-.vertical-fill {
-    position: relative;
-    height: 1000px;
-    width: 1000px;
-    float: left;
-    min-height: 100px;
-    min-width: 100px;
-}
-
 .error-page, .toptitle {
     margin: 0 0 0 15px;
 }
